[package]
name = "fastnoise"
version = "0.6.1"
edition = "2024"

[dependencies]
glam = "0.30.9"
rand = "0.9.2"
rand_pcg = "0.9.0"
rand_seeder = "0.4.0"
rayon = { version = "1.11.0", optional = true }
serde = { version = "1.0.228", features = ["derive"]}
serde_with = "3.16.1"

[dev-dependencies]
crossterm = "0.29.0"
bracket-color = "0.8.7"
ron = "0.12.0"

[features]
default = []
rayon = ["dep:rayon"]
